stylus/base.styl
@viewport
  width device-width

html
  font 1.25em/1.35 serif
  color darkgrey

body
  margin 0 auto
  padding 0 1em
  max-width body-width

h1, h2
  border-bottom 1px solid subtlegrey

table
  width 100%
  border-collapse collapse

th, td
  padding .25em .5em
  border 1px solid lightgrey

tr:nth-child(even)
  background invisiblegrey

blockquote
  color grey
  margin-left 0
  padding-left 2em
  border-left 1px solid lightgrey
  clear() // Do not collapse quote inner margins.

dt
  font-weight bold

dd > ul, dd > ol
  & > li
    left 0
    padding-right 0

pre, code
  font-size .75em

pre > code
  font-size inherit

hr
  border-top 1px solid subtlegrey
  border-bottom 0

a
  color blue
  text-decoration none

  &:hover
    text-decoration underline

  &:visited
    color purple

ul, ol
  padding-left 0

  & li
    position relative
    left 2em
    padding-right 2em

// Backport normalize.css fix from <https://github.com/necolas/normalize.css/commit/5304c784ffbd03da265fcbf7bf49f6964cbcfc9c>.
abbr[title]
  border-bottom none;
  text-decoration underline
  text-decoration underline dotted

